# pgm_to_sdf_converter

./: LICENSE  README.md  package.xml  setup.cfg  setup.py
examples/: bookstore.yaml
pgm_to_sdf_converter/: __init__.py  converter_node.py  map_metadata.py  pgm_enhancer.py  pgm_parser.py  sdf_generator.py  segment_merger.py  wall_aggregation_extractor.py
